[package]
name = "osr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
globalenv = "0.4.2"
itertools = "0.11.0"
lazy_static = "1.4.0"
pest = "2.7.5"
pest_derive = "2.7.5"
rand = "0.8.5"
ron = "0.8.1"
serde = { version = "1.0.190", features = ["derive"] }
thiserror = "1.0.50"
